Fix unreadable text

--- a/dwitter/static/theme_green.css
+++ b/dwitter/static/theme_green.css
@@ -106,7 +106,7 @@ body{
 
 
 .head-account-info.is-logged-in .collapsible li{
-  background: #666;
+  background: #042b00;
 }
 
 #settings-list{
